--- a/services/frontend/index.html
+++ b/services/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,17 +11,27 @@
         <link rel="stylesheet" type="text/css" href="index.css" />
         <link rel="stylesheet" href="https://unpkg.com/bulma-modal-fx/dist/css/modal-fx.min.css" />
     </head>
+    
     <body>
+
         <section class="hero is-info is-small">
             <div class="hero-body">
+                
+                <div class="search-book">
+                    <input type="text" class="search-field" onchange="getBook(this)" name="bookId" id="bookId" placeholder="Insira o ID do livro que deseja encontrar">
+                </div>
+
                 <div class="container has-text-centered">
                     <p class="title">Micro Livraria</p>
                 </div>
+
             </div>
         </section>
+
         <div class="box cta">
             <p class="has-text-centered">Uma simples livraria utilizando microservices</p>
         </div>
+
         <section class="container">
             <div class="columns books"></div>
         </section>
